--- a/Online Shop/ListaKorisnika.html
+++ b/Online Shop/ListaKorisnika.html
@@ -81,24 +81,11 @@
                         // Prikazi samo dugmice vezane za korisnika koji ima datu ulogu
                         var uloga = data.Uloga;
 
-                        if (uloga === 0) {
-                            // u pitanju je kupac
-                            $("#prodavacmeni").remove();
-                            $("#adminmeni").remove();
-                            $("#uloga").text("Kupac");
-                        }
-                        else if (uloga === 1) {
-                            // u pitanju je prodavac
-                            $("#kupacmeni").remove();
-                            $("#adminmeni").remove();
-                            $("#uloga").text("Prodavac");
-                        }
-                        else if (uloga === 2) {
-                            // u pitanju je administrator
-                            $("#prodavacmeni").remove();
-                            $("#kupacmeni").remove();
-                            $("#uloga").text("Administrator");
-                        }
+                        ///////////////////////////////////// VRATI POSLE SADA ZBOG TESTIRANJA NEKA BUDE OVAKO !!!!!!!!!!!!!!!!!
+                        //if (uloga !== 2) {
+                        //    // nije pitanju administrator - povratak na pocetnu stranicu
+                        //    window.location.href = "MojProfil.html";
+                        //}
                     });
                 }
                 else {
@@ -108,6 +95,42 @@
 
                         // sakri meni za nalog
                         $('#profil').addClass('d-none');
+                    });
+                }
+            }
+        });
+
+        // get metoda za dobijanje listi svih korisnika
+        $.ajax({
+            url: "/api/users/ListaKorisnika",
+            type: "GET",
+            async: false,
+            cache: false,
+            dataType: "json",
+            contentType: "application/json; charset=utf-8",
+            success: function (response) {
+                var data = JSON.parse(response);
+
+                if (data.length > 0) {
+                    $(function () {
+                        // popuni tabelu
+                        $.each(data, function (key, k) {
+                            // dodavanje reda po red
+                            var uloga = "Auth";
+
+                            if (k.Uloga == 0) uloga = "Kupac";
+                            if (k.Uloga == 1) uloga = "Prodavac";
+                            if (k.Uloga == 2) uloga = "Administrator";
+                            
+                            $("#korisnici > tbody").append('<tr><td>' + k.KorisnickoIme + '</td>' +
+                                                            '<td>' + k.Ime + '</td>' +
+                                                            '<td>' + k.Prezime + '</td>' +
+                                                            '<td>' + k.Pol + '</td>' +
+                                                            '<td>' + k.Email + '</td>' +
+                                                            '<td>' + new Date(k.DatumRodjenja).toLocaleDateString("en-GB") + '</td>' +
+                                                            '<td><b>' + uloga.toUpperCase() + '</b></td>' +
+                                '</tr>');
+                        }); 
                     });
                 }
             }
@@ -135,7 +158,7 @@
                         }
                     }
                 });
-            });               
+            });
         });
     </script>
 </head>
@@ -179,54 +202,41 @@
                 <div class="row">
                     <div class="col-lg-12 mx-auto mt-4">
                         <div class="row d-flex justify-content-center align-items-center h-100">
-                            <div class="col col-xl-10">
+                            <div class="col col-lg-12">
                                 <div class="card" style="border-radius: 1rem;">
                                     <div class="row g-0">
-                                        <div class="col-md-6 col-lg-5 d-none d-md-block">
-                                            <img src="Images/mainpf.jpg" alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
-                                        </div>
-                                        <div class="col-md-6 col-lg-7 d-flex align-items-center">
+                                        <div class="col-lg-12 d-flex align-items-center">
                                             <div class="card-body p-4 p-lg-5 text-black">
                                                 <form>
                                                     <div class="d-flex mb-3 pb-1">
-                                                        <span class="h1 fw-bold mb-0">Shopy <span id="uloga"></span></span>
+                                                        <span class="h1 fw-bold mb-0">Shopy Korisnici</span>
                                                     </div>
 
-                                                    <h5 class="fw-normal mb-5 pb-2" style="letter-spacing: 1px;">Detalji i opcije Vašeg naloga</h5>
+                                                    <h5 class="fw-normal pb-3" style="letter-spacing: 1px;">Detalji i lista svih korisnika registrovanih na Shopy platofmu</h5>
 
                                                     <div class="pt-1 mb-4">
-                                                        <a href="IzmenaProfila.html" class="btn btn-dark btn-lg btn-block" id="izmenaprofila" type="button">Izmena profila</a>
+                                                        <a href="DodajProdavca.html" class="btn btn-dark btn-lg btn-block">➕ Dodavanje prodavca</a>
                                                     </div>
 
-                                                    <div id="kupacmeni">
                                                         <div class="pt-1 mb-4">
-                                                            <a href="MojePorudzbine.html" class="btn btn-dark btn-lg btn-block" id="mojeporudzbine" type="button">Moje porudžbine</a>
+                                                            <table id="korisnici" class="table table-bordered rounded-5 border-dark">
+                                                                <thead>
+                                                                    <tr>
+                                                                        <th>Korisničko ime</th>
+                                                                        <th>Ime</th>
+                                                                        <th>Prezime</th>
+                                                                        <th>Pol</th>
+                                                                        <th>Email</th>
+                                                                        <th>Datum rođenja</th>
+                                                                        <th>Uloga</th>
+                                                                        <th>Operacija</th>
+                                                                    </tr>
+                                                                </thead>
+                                                                <tbody>
+                                                                    <!-- Ucitani podaci -->
+                                                                </tbody>
+                                                            </table>
                                                         </div>
-
-                                                        <div class="pt-1 mb-4">
-                                                            <a href="OmiljeniProizvodi.html" class="btn btn-dark btn-lg btn-block" id="omiljeniproizvodi" type="button">Omiljeni proizvodi</a>
-                                                        </div>
-                                                    </div>
-
-                                                    <div id="prodavacmeni">
-                                                        <div class="pt-1 mb-4">
-                                                            <a href="MojiProizvodi.html" class="btn btn-dark btn-lg btn-block" id="mojiproizvodi" type="button">Moji proizvodi</a>
-                                                        </div>
-                                                    </div>
-
-                                                    <div id="adminmeni">
-                                                        <div class="pt-1 mb-4">
-                                                            <a href="ListaKorisnika.html" class="btn btn-dark btn-lg btn-block" id="listakorisnika" type="button">Lista korisnika</a>
-                                                        </div>
-
-                                                        <div class="pt-1 mb-4">
-                                                            <a href="ListaProizvoda.html" class="btn btn-dark btn-lg btn-block" id="listaproizvoda" type="button">Lista proizvoda</a>
-                                                        </div>
-
-                                                        <div class="pt-1 mb-4">
-                                                            <a href="ListaPorudzbina.html" class="btn btn-dark btn-lg btn-block" id="listaporudzbina" type="button">Lista porudžbina</a>
-                                                        </div>
-                                                    </div>
                                                 </form>
                                             </div>
                                         </div>
