--- a/Online Shop/IzmenaLozinke.html
+++ b/Online Shop/IzmenaLozinke.html
@@ -1,251 +1,27 @@
 ﻿<!DOCTYPE html>
-<html data-bs-theme="light">
+<html data-bs-theme="light" lang="sr">
 <head>
+    <title>Promena lozinke - Shopy</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Promena lozinke - Shopy</title>
     <link rel="stylesheet" href="Content/bootstrap.min.css">
+    <link href="Content/shopy.css" rel="stylesheet" />
     <script src="Scripts/jquery-3.7.0.min.js"></script>
+    <script src="Scripts/load-optimizer.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
     <script src="Scripts/bootstrap.bundle.min.js"></script>
     <script src="Scripts/modernizr-2.8.3.js"></script>
-    <style>
-        .navbar .login-btn {
-            position: absolute;
-            top: 7px;
-            right: 95px;
-        }
-
-        .navbar .profil-btn {
-            position: absolute;
-            top: 10px;
-            right: 35px;
-        }
-
-        @media (max-width: 767px) {
-            .navbar .login-btn {
-                right: 75px;
-            }
-        }
-
-        .navbar .register-btn {
-            position: absolute;
-            top: 7px;
-            right: 15px;
-        }
-
-        @media (max-width: 767px) {
-            .navbar .register-btn {
-                right: 175px;
-            }
-        }
-    </style>
-    <script>
-        var STARI_DATUM = "";
-
-        // ako je ulogovan, prebaci ga na index - slucaj da ide na back opciju
-        $.ajax({
-            url: "/api/auth/Ulogovan",
-            type: "GET",
-            async: false,
-            cache: false,
-            dataType: "json",
-            contentType: "application/json; charset=utf-8",
-            success: function (response) {
-                if (response != null) {
-                    if (JSON.parse(response).Kod !== 0) // korisnik je ulogovan, ne moze da se registruje
-                    {
-                        window.location.href = "Index.html";
-                    }
-                }
-            }
-        });
-
-        // ako je ulogovan, prebaci prikazi meni u zavisnoti od uloge
-        $.ajax({
-            url: "/api/auth/AuthKorisnik",
-            type: "GET",
-            async: false,
-            cache: false,
-            dataType: "json",
-            contentType: "application/json; charset=utf-8",
-            success: function (response) {
-                var data = JSON.parse(response);
-                if (data.KorisnickoIme !== "") {
-                    // prikazi podatke i promeni meni
-                    // sakri dugmice za login i register
-                    $(function () {
-                        $("#pl").remove();
-
-                        // prikazi meni za nalog
-                        $('#poruka').text("Dobrodošli nazad, " + data.KorisnickoIme);
-
-                        // Popuni formu
-                        $("#korisnickoime").val(data.KorisnickoIme);
-                        $("#ime").val(data.Ime);
-                        $("#prezime").val(data.Prezime);
-                        $("#pol").val(data.Pol);
-                        $("#email").val(data.Email);
-
-                        let today = new Date(data.DatumRodjenja);
-
-                        let day = (today.getDate());
-                        let month = ('0' + (today.getMonth() + 1)).slice(-2);
-                        let year = today.getFullYear();
-
-                        let currentDate = `${day}.${month}.${year}`;
-                        $("#trenutni").text("Datum rođenja: " + currentDate + " (trenutni)");
-                        STARI_DATUM = currentDate;
-                    });
-                }
-                else {
-                    $(function () {
-                        // korisnik nije ulogovan - prikazi login i register
-                        $("#pl").show();
-
-                        // sakri meni za nalog
-                        $('#profil').addClass('d-none');
-                    });
-                }
-            }
-        });
-
-        // Odjava korisnika
-        jQuery(function () {
-            // inicijalno nema poruka o greskama
-            $("#divgreske").addClass('d-none');
-
-            $("#odjava").on('click', function () {
-                // ajax poziv ka api-ju za vrsenje registracije
-                $.ajax({
-                    url: "/api/auth/Odjava",
-                    type: "POST",
-                    data: {},
-                    async: false,
-                    cache: false,
-                    dataType: "json",
-                    contentType: "application/json; charset=utf-8",
-                    success: function (response) {
-                        if (response != null) {
-                            if (JSON.parse(response).Kod === 0) // korisnik se odjavio uspesno
-                            {
-                                window.location.href = "Index.html";
-                                return false;
-                            }
-                        }
-                    }
-                });
-            });
-
-            // cuvanje izmena
-            $("#azurirajbtn").on('click', function () {
-                var stara_lozinka = $("#staralozinka").val();
-                var nova_lozinka = $("#novalozinka").val();
-
-                var greska = false;
-
-                // provera unosa na klijentu
-                if (stara_lozinka.length < 6) {
-                    $("#g2").addClass("d-block");
-                    $("#g2").removeClass("d-none");
-                    $("#staralozinka").addClass("is-invalid");
-                    $("#g2").text("Lozinka mora imati minimalno 6 karaktera!");
-                    greska = true;
-                }
-                else {
-                    $("#g2").addClass("d-none");
-                    $("#staralozinka").removeClass("is-invalid");
-                    $("#staralozinka").removeClass("invalid-feedback");
-                    $("#staralozinka").add("is-valid");
-                }
-
-                if (nova_lozinka.length < 6) {
-                    $("#g1").addClass("d-block");
-                    $("#g2").removeClass("d-none");
-                    $("#novalozinka").addClass("is-invalid");
-                    $("#g2").text("Lozinka mora imati minimalno 6 karaktera!");
-                    greska = true;
-                }
-                else {
-                    $("#g2").addClass("d-none");
-                    $("#novalozinka").removeClass("is-invalid");
-                    $("#novalozinka").removeClass("invalid-feedback");
-                    $("#novalozinka").add("is-valid");
-                }
-
-                if (greska === true) return; // ne izvrsava se ajax poziv - rasterecuje se server od callbacks
-
-                // ajax poziv ka api-ju za vrsenje registracije
-                $.ajax({
-                    url: "/api/auth/AzuriranjeLozinke",
-                    type: "POST",
-                    data: JSON.stringify({
-                        StaraLozinka: stara_lozinka,
-                        NovaLozinka: nova_lozinka
-                    }),
-
-                    async: false,
-                    cache: false,
-                    dataType: "json",
-                    contentType: "application/json; charset=utf-8",
-                    success: function (response) {
-                        if (response != null) {
-                            if (JSON.parse(response).Kod === 0) // azuriranje podataka je proslo uspesno
-                            {
-                                window.location.href = "MojProfil.html";
-                                return false;
-                            }
-                            else {
-                                // desila se greska - prikazi je
-                                $("#divgreske").removeClass('d-none');
-                                $("#greske").text(JSON.parse(response).Poruka);
-                            }
-                        }
-                    }
-                });
-            });
-        });
-    </script>
+    <script src="Scripts/api/auth/auth-base.js"></script>
+    <script src="Scripts/api/auth/auth-update-password.js"></script>
+    <script src="Scripts/loader-finisher.js"></script>
 </head>
-<body>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
-        <div class="container">
-            <a href="/" class="navbar-brand">Shopy</a>
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
-                    <li><a href="/" class="nav-link">Početna stranica</a></li>
-                    <li id="pl">
-                        <a href="Registracija.html" type="submit" id="registracija" class="btn btn-outline-light navbar-btn login-btn">Registracija</a>
-                        <a href="Prijava.html" type="submit" id="prijava" class="btn btn-outline-light navbar-btn register-btn">Prijava</a>
-                    </li>
-                    <li id="profil">
-                        <div class="btn-group profil-btn">
-                            <button type="button" class="btn btn-outline-light dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                <span id="poruka"></span>
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="MojProfil.html" id="mojprofil">Moj profil</a></li>
-                                <li><a class="dropdown-item" href="IzmenaLozinke.html" id="izmenalozinke">Izmena lozinke</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item text-danger" id="odjava" href="#">Odjava sa platforme</a></li>
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+<body class="d-none bsp">
+    <div id="nm"></div>
     <div class="container body-content mt-4 mb-5">
         <main>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12 mx-auto mt-4">
+                    <div class="col-lg-12 mx-auto mt-5 pt-3">
                         <div class="row d-flex justify-content-center align-items-center h-50">
                             <div class="col col-xl-10">
                                 <div class="card" style="border-radius: 1rem;">
@@ -282,7 +58,7 @@
                                                     <p class="my-3 pb-lg-2 fw-bold text-danger">
                                                         Može proći nekoliko minuta dok se nova lozinka ne primeni na svim servisima e-platforme!
                                                     </p>
-                                                    <div class="pt-1 mb-4">
+                                                    <div class="pt-3 mb-2">
                                                         <button class="btn btn-dark btn-lg btn-block" id="azurirajbtn" type="button">Promeni lozinku</button>
                                                     </div>
                                                 </form>
